src/test/deca/syntax/invalid/created/bad-str.deca
{
    string mot = "salut la chaine se "casse""
}
